# servers

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  main.cpp
client/: CMakeLists.txt  main.cpp
client/include/: client.cpp
client/source/: client.hpp
servers/: CMakeLists.txt
servers/dataServer/: CMakeLists.txt  main.cpp
servers/dataServer/include/: dataServer.cpp
servers/dataServer/source/: dataServer.hpp
servers/displayServer/: CMakeLists.txt  main.cpp
servers/displayServer/include/: displayServer.cpp
servers/displayServer/source/: displayServer.hpp
servers/server/: CMakeLists.txt
servers/server/include/: server.cpp
servers/server/source/: server.hpp
socket/: CMakeLists.txt
socket/include/: socket.cpp
socket/source/: socket.hpp
tests/: CMakeLists.txt  client.cpp  dataServer.cpp  displayServer.cpp  integration_tests.cpp  socket.cpp  test_full.cpp  test_servers.hpp
